--- a/index.html
+++ b/index.html
@@ -1,21 +1,7 @@
 <html>
-    <script>
-        function helloHere() {
-            console.log('Hello here');
-        }
-    </script>
+    <script type="module" src="./modules/vscode-wc.js"></script>
+
     <body>
-        <vscode-button id="howdy">VS Code</vscode-button>
-        <md-filled-button label="Complete"></md-filled-button>
-        <button onclick="helloHere()">Hello here</button>
-        <button onclick="helloThere()">Hello there</button>
-        <script type="module">
-            import { helloThere } from './modules/vscode-ui-toolkit.js';
-            import { provideVSCodeDesignSystem, vsCodeButton } from "@vscode/webview-ui-toolkit";
-            import '@material/web/button/filled-button.js';
-            
-            window.helloThere = helloThere;
-            provideVSCodeDesignSystem().register(vsCodeButton());
-        </script>
+        <vscode-button>VS Code</vscode-button>
     </body>
 </html>
